:wrench: Fix overlay not showing

--- a/components/image/image.styl
+++ b/components/image/image.styl
@@ -3,15 +3,9 @@
     width 100%
     margin 20px 0
     padding 0
-    background-color var(--preload)
     border 0
     border-radius 12px
     border-image-width 0
-
-    & > .image
-        display block
-        width inherit
-        border-radius inherit
 
 .standalone-overlay
     position fixed
@@ -25,8 +19,12 @@
     width 100%
     height 100vh
     padding 40px
-    border-radius 12px
+    background-color rgba(0,0,0,.5)
 
+    & > .image
+        display block
+        max-width 100%
+        max-height 100%
     
     @media screen and (max-width 768px)
         &
